// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify check selection should pass a check with nothing to inspect 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -scripts",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify scripts:",
    "Check gamedata scripts in <duration>, no scripts found",
    "",
    "Project gamedata is valid",
    "Gamedata project verified in <duration>",
  ],
}
`;

exports[`gamedata verify check selection should report findings from one named check 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify check selection should run several named checks at once 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "  -scripts",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
    "Verify scripts:",
    "Check gamedata scripts in <duration>, no scripts found",
  ],
}
`;

exports[`gamedata verify check selection should verify meshes 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Cannot read OGF texture: wpn\\wpn_bolt",
    "Mesh motion refs not found by path: dynamics\\devices\\dev_bolt\\dev_bolt_hud_animation",
    "Not matching bones count in ogf and reference omf: 2 <-> 7 : wpn_body,body <-> wpn_body,body,trigger,zatvor,lock,wpn_silencer,magazin",
    "Mesh is not valid: meshes\\ogf\\dev_bolt_hud.ogf",
    "Cannot read OGF texture: item\\item_notes",
    "Mesh is not valid: meshes\\ogf\\notes_paper_1.ogf",
    "Cannot read OGF texture: glow\\glow_ghost",
    "Mesh is not valid: meshes\\ogf\\part_none.ogf",
    "Mesh motion refs not found by path: actors\\stalker_animation",
    "Mesh motion refs not found by path: actors\\stalker_scripts_animation",
    "Mesh motion refs not found by path: actors\\zombied_animation",
    "Mesh motion refs not found by path: actors\\stalker_smart_cover_animation",
    "Mesh is not valid: meshes\\ogf\\residue_split_motion_ref.ogf",
    "Cannot read OGF texture: wpn\\wpn_pm",
    "Mesh is not valid: meshes\\ogf\\wpn_pm_lod.ogf",
    "",
    "Project gamedata is invalid",
    "- 1/1 shader libraries valid, 205 blender definitions; 0/5 meshes valid",
    "  - [meshes] meshes/ogf/dev_bolt_hud.ogf: Mesh references missing motion 'dynamics\\devices\\dev_bolt\\dev_bolt_hud_animation'",
    "  - [meshes] meshes/ogf/dev_bolt_hud.ogf: Mesh references missing texture 'wpn\\wpn_bolt'",
    "  - [meshes] meshes/ogf/notes_paper_1.ogf: Mesh references missing texture 'item\\item_notes'",
    "  - [meshes] meshes/ogf/part_none.ogf: Mesh references missing texture 'glow\\glow_ghost'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh carries 34 bytes the engine never reads, an uncounted motion reference 'actors\\stalker_scenario_animation' split across the declared bounds of the motion refs chunk",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\stalker_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\stalker_scripts_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\stalker_smart_cover_animation'",
    "  - [meshes] meshes/ogf/residue_split_motion_ref.ogf: Mesh references missing motion 'actors\\zombied_animation'",
    "  - [meshes] meshes/ogf/wpn_pm_lod.ogf: Mesh references missing texture 'wpn\\wpn_pm'",
    "  - [meshes] meshes/omf/wpn_mp5_hud_animation.omf: Motion bone count does not match mesh: 2 mesh bones, 7 motion bones",
    "Gamedata project checked in <duration>",
    "Check failed: 11 finding(s)",
  ],
  "stdout": [
    "Workers: <workers> (auto)",
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [.git, .idea, particles_unpacked, textures_unpacked, .gitignore, .gitattributes, README.md, LICENSE]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -meshes",
    "",
    "Verify declared source coverage:",
    "Verified declared source coverage in <duration>, 0 unopened source(s)",
    "Verify path collisions:",
    "Verified gamedata path collisions in <duration>, 0 unreachable file(s)",
    "Verify meshes:",
    "Verified gamedata meshes in <duration>, 1/1 shader libraries valid, 205 blender definitions; 0/5 meshes valid",
  ],
}
`;

exports[`gamedata verify check selection should write nothing 1`] = `[]`;
